# java-new

./: README.md
cpp-sample/: .gitignore  CMakeLists.txt  auto.cpp
java-sample/: build.gradle.kts  settings.gradle.kts
java-sample/src/main/java/com/bennyhuo/java/: Main.java
java-sample/src/main/kotlin/com/bennyhuo/kotlin/: Main.kt
java21/: .gitignore  build.gradle.kts  settings.gradle.kts
java21-ij/src/com/bennyhuo/java/: Main.java
java21/SimpleNativeLibrary/: CMakeLists.txt  main.c  simple_functions.c  simple_functions.h
java21/gradle/wrapper/: gradle-wrapper.properties
java21/src/main/java/com/bennyhuo/java/: ForeignApis.java  NewMain.java  OldMain.java  ScopedValues.java  StringTemplate.java  Switch.java  VectorApi.java  VirtualThreads.java
